# pycon-2024

./: .gitignore  LICENSE  PYCON-AFRICA.pptx  README.md  requirements.txt
req_engineering_project/: .gitignore  README.md  pyproject.toml
req_engineering_project/src/req_engineering_project/: app.py  crew.py  utils.py
req_engineering_project/src/req_engineering_project/config/: agents.yaml  tasks.yaml
req_engineering_project/src/req_engineering_project/pages/: 1_outputs_viewer.py
req_engineering_project/src/req_engineering_project/tools/: query_engine_toolset.py  search_toolset.py
req_engineering_project/src/req_engineering_project/tools/data/outputs/: BRD_draft.md  compliance_report.md  final_BRD.md  market_research.md  meeting_profiling_documents.md
